sand-macros/tests/cases/fail_function_bad_namespace.rs
use sand_macros::function;

#[function("BAD:path")]
fn bad() {}

fn main() {}
